# viprs

./: .gitattributes  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  cov_report.txt  deny.toml  release-please-config.json
crates/viprs-codecs/: Cargo.toml  build.rs
crates/viprs-codecs/src/: analyze.rs  avif.rs  bmp.rs  csv.rs  dcraw.rs  deepzoom.rs  exr.rs  fits.rs  gif.rs  heif.rs  heif_support.rs  jp2k.rs  jpeg.rs  jxl.rs  lib.rs  magick.rs  mat.rs  matrix.rs  nifti.rs  openslide.rs  pdf_poppler.rs  pfm.rs  png.rs  pnm.rs  radiance.rs  raw.rs  registry.rs  shrink_on_load.rs  svg.rs  tiff.rs  uhdr.rs  vips_format.rs  web_colour.rs  webp.rs
crates/viprs-codecs/src/jpeg/: common.rs  decode.rs  encode.rs  tests.rs
crates/viprs-codecs/src/png/: decode_full.rs  encode.rs  metadata.rs  region_decode.rs  state.rs  tests.rs
crates/viprs-codecs/src/registry/: bridges.rs  deepzoom.rs  deferred.rs  runtime.rs  tests.rs
crates/viprs-codecs/src/tiff/: decode.rs  encode.rs  pyramid.rs  tests.rs
crates/viprs-codecs/src/webp/: animated.rs  common.rs  encode.rs  static_decode.rs  tests.rs
crates/viprs-core/: Cargo.toml
crates/viprs-core/src/: cancel.rs  codec_options.rs  coeff.rs  colorspace.rs  colour.rs  concretize.rs  draw.rs  error.rs  image.rs  kernel.rs  lib.rs  limits.rs  reducer.rs  reorder.rs  resample.rs  shared_ops.rs  simd.rs  simd_util.rs  stats.rs
crates/viprs-core/src/format/: band.rs  point_sample.rs  sample_math.rs  tests.rs
crates/viprs-core/src/image/: core.rs  metadata.rs  region.rs  tests.rs
crates/viprs-core/src/op/: bridge.rs  demand.rs  dynamic_op.rs  static_op.rs  tests.rs
crates/viprs-core/src/shared_ops/: cast_sample.rs  extend_mode.rs  gauss_kernel.rs  invertible.rs  recomb.rs  rhs_broadcast.rs  sample_conv.rs
crates/viprs-ops-colour/: Cargo.toml
crates/viprs-ops-colour/src/: colour.rs  histogram.rs  lib.rs
crates/viprs-ops-colour/src/colour/: bridge.rs  bw_to_srgb.rs  cicp2scrgb.rs  cmyk.rs  cmyk_to_xyz.rs  de00.rs  de76.rs  decmc.rs  float_to_radiance.rs  hsv_to_srgb.rs  icc.rs  lab_to_labq.rs  lab_to_labs.rs  lab_to_lch.rs  lab_to_srgb.rs  lab_to_xyz.rs  labq_to_lab.rs  labq_to_labs.rs  labq_to_srgb.rs  labs_to_lab.rs  labs_to_labq.rs  lch_to_lab.rs  lch_to_ucs.rs  math.rs  oklab.rs  radiance_to_float.rs  rgb16_to_srgb.rs  scrgb_to_bw.rs  scrgb_to_srgb.rs  scrgb_to_xyz.rs  srgb_lab_adjust.rs  srgb_lab_roundtrip.rs  srgb_to_hsv.rs  srgb_to_lab.rs  srgb_to_rgb16.rs  srgb_to_scrgb.rs  srgb_to_xyz.rs  ucs_to_lch.rs  uhdr2scrgb.rs  xyz_to_cmyk.rs  (+5 more)
crates/viprs-ops-colour/src/histogram/: case.rs  clahe.rs  hist_cum.rs  hist_entropy.rs  hist_equal.rs  hist_find_facades.rs  hist_find_indexed.rs  hist_find_ndim_compat.rs  hist_ismonotonic.rs  hist_match.rs  hist_norm.rs  hist_percent.rs  hist_plot.rs  stdif.rs
crates/viprs-ops-composite/: Cargo.toml
crates/viprs-ops-composite/src/: conversion.rs  create.rs  draw.rs  lib.rs  mosaicing.rs
crates/viprs-ops-composite/src/conversion/: addalpha.rs  arrayjoin.rs  autorot.rs  bandbool.rs  bandfold.rs  bandjoin.rs  bandmean.rs  bandrank.rs  bandsplit.rs  bandunfold.rs  byteswap.rs  cast.rs  composite.rs  copy.rs  embed.rs  extract_bands.rs  falsecolour.rs  flip.rs  gamma.rs  grid.rs  ifthenelse.rs  msb.rs  replicate.rs  rot.rs  rot45.rs  scale.rs  sequential.rs  smartcrop.rs  subsample.rs  switch.rs  transpose3d.rs  wrap.rs  zoom.rs
crates/viprs-ops-composite/src/create/: black.rs  buildlut.rs  eye.rs  fractsurf.rs  frequency_mask.rs  gaussmat.rs  gaussnoise.rs  grey.rs  identity.rs  invertlut.rs  logmat.rs  mandelbrot.rs  perlin.rs  point.rs  sdf.rs  sines.rs  tonelut.rs  worley.rs  xyz.rs  zone.rs
crates/viprs-ops-composite/src/draw/: draw_circle.rs  draw_flood.rs  draw_image.rs  draw_line.rs  draw_mask.rs  draw_rect.rs  draw_smudge.rs
crates/viprs-ops-composite/src/freqfilt/: freqmult.rs  fwfft.rs  invfft.rs  phasecor.rs  spectrum.rs
crates/viprs-ops-composite/src/mosaicing/: auto_mosaic.rs  chkpair.rs  global_balance.rs  lrmerge.rs  lrmosaic.rs  match_op.rs  merge.rs  mosaic.rs  remosaic.rs  tbmerge.rs  tbmosaic.rs  tie_points.rs
crates/viprs-ops-pixel/: Cargo.toml
crates/viprs-ops-pixel/src/: arithmetic.rs  lib.rs  relational.rs
crates/viprs-ops-pixel/src/arithmetic/: abs.rs  acos.rs  add.rs  add_images.rs  asin.rs  atan.rs  clamp.rs  complex_conj.rs  complex_form.rs  complex_imag.rs  complex_real.rs  cos.rs  divide.rs  exp.rs  find_trim.rs  invert.rs  linear.rs  log.rs  math2.rs  maxpair.rs  measure.rs  minpair.rs  multiply.rs  polar.rs  power.rs  recomb.rs  rect.rs  reduce_facades.rs  remainder.rs  rhs_broadcast.rs  round.rs  sign.rs  sin.rs  sqrt.rs  subtract.rs  sum.rs  tan.rs
crates/viprs-ops-pixel/src/boolean/: and.rs  common.rs  lshift.rs  or.rs  rshift.rs  xor.rs
crates/viprs-ops-pixel/src/lut/: map_lut.rs
crates/viprs-ops-pixel/src/point/: abs.rs  boolean.rs  clamp.rs  gamma.rs  invert.rs  linear.rs  trig.rs
crates/viprs-ops-pixel/src/relational/: equal.rs  less.rs  less_eq.rs  more.rs  more_eq.rs  not_equal.rs
crates/viprs-ops-spatial/: Cargo.toml
crates/viprs-ops-spatial/src/: convolution.rs  lib.rs  morphology.rs  resample.rs  structural.rs
crates/viprs-ops-spatial/src/convolution/: canny.rs  conv.rs  (+14 more)
crates/viprs-ports/: Cargo.toml
crates/viprs-ports/src/: codec.rs  lib.rs  scheduler.rs  sink.rs  source.rs
crates/viprs-runtime/: Cargo.toml
crates/viprs-runtime/src/: cache.rs  colour_dispatcher.rs  concretized_bridge.rs  foreign.rs  freqfilt.rs  image_api.rs  image_pipeline.rs  integration_tests.rs  lib.rs  lock_instrumentation.rs  pipeline.rs  process.rs  sinks.rs  sources.rs
xtask/: Cargo.toml  README.md
xtask/src/: bench.rs  common.rs  counting_alloc.rs  docker.rs  main.rs  perf.rs  profile.rs  web_bench.rs
xtask/src/bench/: args.rs  helpers.rs  pipeline.rs  runner.rs  types.rs
xtask/src/perf/: alloc.rs  args.rs  hw.rs  simd.rs
xtask/src/profile/: args.rs  cachegrind.rs  dhat.rs  samply.rs
xtask/src/web_bench/: args.rs  runner.rs  scenarios.rs
(+1071 files in other folders)
