[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[features]
count-alloc = []
exr = ["viprs/exr"]

[dependencies]
# Keep libspng enabled so PNG E2E benches use the same C-backed decoder family as libvips.
viprs = { path = "..", features = ["rayon", "jpeg", "png", "libspng", "webp", "gif", "tiff", "avif", "heif", "jxl", "jp2k", "exr", "fft", "svg", "pdf-poppler"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
bytemuck = "1"
mozjpeg = "0.10.13"
