[package]
name = "viprs-codecs"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
publish = false
description = "Image codec implementations for viprs"

[lints]
workspace = true

[dependencies]
viprs-core = { path = "../viprs-core", version = "0.1.0" }
viprs-ports = { path = "../viprs-ports", version = "0.1.0" }
viprs-ops-colour = { path = "../viprs-ops-colour", version = "0.1.0", optional = true }
jpeg-encoder = { version = "0.6", optional = true }
turbojpeg = { version = "1", optional = true, default-features = false, features = ["pkg-config", "require-simd"] }
png = { version = "0.18", optional = true }
spng = { version = "0.2.0-alpha.3", optional = true }
flate2 = { version = "1", optional = true }
crc32fast = { version = "1", optional = true }
webp = { version = "0.3", optional = true, default-features = false }
libwebp-sys = { version = "0.9", optional = true }
tiff = { version = "0.11.3", optional = true }
weezl = { version = "0.1", optional = true }
gif = { version = "0.13", optional = true }
exr = { version = "1.74.0", optional = true }
ravif = { version = "0.11", optional = true }
rgb = { version = "0.8", optional = true }
libheif-rs = { version = "0.20", optional = true }
libheif-sys = { version = "1.16.2", optional = true }
resvg = { version = "0.47.0", optional = true }
jxl-oxide = { version = "0.12.6", optional = true }
jpegxl-rs = { version = "0.14.0", optional = true, default-features = false }
lcms2 = { version = "6.1.1", optional = true }
fitsio-sys = { version = "0.5.7", optional = true, features = ["fitsio-src"] }
hdf5-pure-rust = { version = "0.3.6", optional = true }
jpeg2k = { version = "0.10.1", optional = true }
openjpeg-sys = { version = "1.0.12", optional = true }
openslide-rs = { version = "2.4.0", optional = true, default-features = false }
nifti = { version = "0.17.0", optional = true }
image = { version = "0.25.10", optional = true, default-features = false, features = ["bmp"] }
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }
rayon = { version = "1", optional = true }
memmap2 = { version = "0.9", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1"
viprs-runtime = { path = "../viprs-runtime", version = "0.1.0" }

[features]
rayon = ["dep:rayon"]
mmap = ["dep:memmap2"]
tracing = ["dep:tracing"]
jpeg = ["dep:turbojpeg", "dep:jpeg-encoder", "icc"]
bmp = ["dep:image"]
png = ["dep:png", "dep:flate2", "dep:crc32fast", "icc"]
libspng = ["png", "dep:spng"]
webp = ["dep:webp", "dep:libwebp-sys", "icc"]
tiff = ["dep:tiff", "dep:jpeg-encoder", "dep:weezl"]
gif = ["dep:gif"]
exr = ["dep:exr"]
radiance = []
pfm = []
avif = ["dep:ravif", "dep:rgb", "dep:libheif-rs", "dep:libheif-sys"]
heif = ["dep:libheif-rs", "dep:libheif-sys"]
svg = ["dep:resvg"]
jxl = ["dep:jxl-oxide", "dep:jpegxl-rs"]
icc = ["dep:lcms2", "dep:viprs-ops-colour", "viprs-ops-colour/icc"]
fits = ["dep:fitsio-sys"]
mat-hdf5 = ["dep:hdf5-pure-rust"]
jp2k = ["dep:jpeg2k", "dep:openjpeg-sys"]
openslide = ["dep:openslide-rs"]
uhdr = ["jpeg"]
deepzoom = []
dcraw = []
csv = []
vips-format = []
nifti = ["dep:nifti"]
pnm = []
magick = []
pdf-poppler = []
_integration = []
_root_test_support = []
