[package]
name = "viprs-core"
version.workspace = true
edition = "2024"
rust-version = "1.92"
license.workspace = true
publish = false
description = "Core domain types and traits for viprs"

[lints]
workspace = true

[dependencies]
thiserror = "2"
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }
ab_glyph = "0.2"

[dev-dependencies]
proptest = "1"
