[package]
name = "viprs-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license.workspace = true
description = "Core domain types and traits for viprs"

[lints]
workspace = true

[dependencies]
thiserror = "2"
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }
ab_glyph = "0.2"

[dev-dependencies]
proptest = "1"
