[package]
name = "viprs-ops-colour"
version = "0.1.1"
edition = "2024"
rust-version = "1.92"
license.workspace = true

[lints]
workspace = true

[dependencies]
viprs-core = { path = "../viprs-core", version = "0.1.1" }
viprs-ports = { path = "../viprs-ports", version = "0.1.1" }
viprs-ops-pixel = { path = "../viprs-ops-pixel", version = "0.1.1" }
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }
lcms2 = { version = "6.1.1", optional = true }

[dev-dependencies]
proptest = "1"
viprs-runtime = { path = "../viprs-runtime", version = "0.1.1" }

[features]
_integration = []
icc = ["dep:lcms2"]
