[package]
name = "viprs-ops-composite"
version = "0.1.1"
edition = "2024"
rust-version = "1.92"
license.workspace = true
repository.workspace = true
description = "Composite, conversion, drawing, and generated-image operations for viprs"
include = ["Cargo.toml", "src/**"]

[lints]
workspace = true

[dependencies]
viprs-core = { path = "../viprs-core", version = "0.1.1" }
viprs-ops-pixel = { path = "../viprs-ops-pixel", version = "0.1.1" }
viprs-ops-spatial = { path = "../viprs-ops-spatial", version = "0.1.1" }
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }
rustfft = { version = "6", optional = true }

[dev-dependencies]
proptest = "1"
viprs-ports = { path = "../viprs-ports", version = "0.1.1" }
viprs-runtime = { path = "../viprs-runtime", version = "0.1.1" }

[features]
_integration = []
fft = ["dep:rustfft"]
