[package]
name = "viprs-ops-pixel"
version.workspace = true
edition = "2024"
rust-version = "1.92"
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
viprs-core.workspace = true
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }

[dev-dependencies]
proptest = "1"

[features]
_integration = []
