[package]
name = "viprs-ops-pixel"
version = "0.1.2"
edition = "2024"
rust-version = "1.92"
license.workspace = true
repository.workspace = true
description = "Pixel-local arithmetic, boolean, and point operations for viprs"
include = ["Cargo.toml", "src/**"]

[lints]
workspace = true

[dependencies]
viprs-core = { path = "../viprs-core", version = "0.1.2" }
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }

[dev-dependencies]
proptest = "1"

[features]
_integration = []
