[package]
name = "viprs-ops-spatial"
version = "0.1.2"
edition = "2024"
rust-version = "1.92"
license.workspace = true
repository.workspace = true
description = "Spatial, convolution, morphology, and resampling operations for viprs"
include = ["Cargo.toml", "src/**"]

[lints]
workspace = true

[dependencies]
viprs-core = { path = "../viprs-core", version = "0.1.2" }
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }
pulp = { version = "0.22.2", optional = true, default-features = false, features = ["std", "x86-v3"] }

[dev-dependencies]
proptest = "1"
viprs-runtime = { path = "../viprs-runtime", version = "0.1.2" }
viprs-ports = { path = "../viprs-ports", version = "0.1.2" }

[features]
_integration = []
lock_instrumentation = []
simd-pulp = ["dep:pulp"]
