[package]
name = "viprs-ports"
version = "0.1.1"
edition = "2024"
rust-version = "1.92"
license.workspace = true
description = "Infrastructure port traits for viprs (codecs, scheduler, sinks, sources)"

[lints]
workspace = true

[dependencies]
viprs-core = { path = "../viprs-core", version = "0.1.1" }
